posiGen_FullsendBox/src/objects/Data_Processing_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Completion__c</fullName>
        <label>Actual Completion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Count_of_Clients_Included__c</fullName>
        <description>Count of client usernames imported</description>
        <label>Count of Clients Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Systems_Included__c</fullName>
        <description>Count of systems imported.</description>
        <label>Count of Systems Included</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_Already_Processed_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this will create the Locus Imports regardless of past status.</inlineHelpText>
        <label>Include Already Processed Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Placed_In_Service_End_Date__c</fullName>
        <description>Used to filter for Systems with Placed in Service Date &lt; this field</description>
        <label>Placed In Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Placed_In_Service_Start_Date__c</fullName>
        <description>Used as a filter for Systems with Placed in Service Date &gt; this field</description>
        <label>Placed In Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Submitted to Process will start the process.</inlineHelpText>
        <label>Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Being Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <inlineHelpText>Date/Time the DPR was changed to &quot;Submitted to Process&quot;</inlineHelpText>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <label>Data Processing Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Placed_In_Service_Start_Date__c</columns>
        <columns>Placed_In_Service_End_Date__c</columns>
        <columns>Include_Already_Processed_Systems__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Actual_Start__c</columns>
        <columns>Actual_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Completed_Data_Processing_Requests</fullName>
        <columns>NAME</columns>
        <columns>Count_of_Clients_Included__c</columns>
        <columns>Count_of_Systems_Included__c</columns>
        <columns>Include_Already_Processed_Systems__c</columns>
        <columns>Placed_In_Service_End_Date__c</columns>
        <columns>Placed_In_Service_Start_Date__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Actual_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Process Complete</value>
        </filters>
        <label>Completed Data Processing Requests</label>
    </listViews>
    <listViews>
        <fullName>Pending_Data_Processing_Requests</fullName>
        <columns>NAME</columns>
        <columns>Count_of_Clients_Included__c</columns>
        <columns>Count_of_Systems_Included__c</columns>
        <columns>Include_Already_Processed_Systems__c</columns>
        <columns>Placed_In_Service_End_Date__c</columns>
        <columns>Placed_In_Service_Start_Date__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Submitted to Process</value>
        </filters>
        <label>Pending Data Processing Requests</label>
    </listViews>
    <nameField>
        <displayFormat>DPR-{0000}</displayFormat>
        <label>Data Processing Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Processing Requests</pluralLabel>
    <recordTypes>
        <fullName>SF_to_Locus_System_Upload_Excel_Files</fullName>
        <active>true</active>
        <label>SF to Locus System Upload Excel Files</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>